--- a/main.scss
+++ b/main.scss
@@ -22,10 +22,6 @@
   .open-nav {
     transform: translateX(0);
   }
-  .paws,
-  .dots {
-    display: none;
-  }
 }
 
 :root {
@@ -42,7 +38,15 @@ body {
   background: var(--primary-color);
   margin: 1em;
 
-  img {
+  .dogpaws {
+    display: none;
+  }
+
+  .paws {
+    display: none;
+  }
+
+  .dots {
     display: none;
   }
 
@@ -136,8 +140,6 @@ body {
       font-weight: 400;
       line-height: 20.2px;
       text-align: center;
-
-      //display: none;
     }
 
     .cta {
@@ -154,6 +156,44 @@ body {
       padding: 10px 6px 10px 10px;
       border-radius: 48px;
       margin-top: 2em;
+      margin-bottom: 2em;
+
+      &:hover {
+        background: transparent;
+        color: #562211;
+        border: 2px solid #562211;
+      }
+    }
+
+    .features {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 20px;
+      margin-top: 4em;
+
+      .one,
+      .first {
+        text-align: center;
+        h2 {
+          font-family: Oldenburg;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 20.2px;
+          color: var(--secondary-color);
+
+          span {
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 15.15px;
+            color: #544f4f;
+          }
+        }
+      }
+    }
+
+    .hero-img {
+      margin-top: 5em;
+      width: 100%;
     }
   }
 }
@@ -212,6 +252,30 @@ body {
       width: 25px;
       cursor: pointer;
     }
+
+    .dogpaws {
+      width: 450px;
+      top: 8em;
+      display: block;
+      position: absolute;
+    }
+
+    .paws {
+      margin-left: 72em;
+      position: absolute;
+      top: 30px;
+      width: 110px;
+      display: block;
+    }
+
+    .dots {
+      display: block;
+      position: absolute;
+      width: 10px;
+      top: 500px;
+      bottom: 500px;
+      left: 120em;
+    }
     header {
       .logo {
         a {
@@ -252,7 +316,8 @@ body {
 
               &:hover {
                 background: none;
-                color: #414141;
+                color: #562211;
+                font-size: 600;
               }
 
               &::after {
@@ -301,8 +366,8 @@ body {
         margin-left: -10em;
 
         &:hover {
-          background: #79c0f2;
-          border: 1px solid #2686ca;
+          background: #562211;
+          color: var(--primary-color);
         }
       }
     }
@@ -312,31 +377,57 @@ body {
       font-family: poppins;
       h1 {
         margin-top: 1em;
-        font-size: 90px;
+        width: 785px;
+        font-family: Roboto;
+        font-size: 60px;
         font-weight: 600;
-        line-height: 114.5px;
-        letter-spacing: -0.01em;
-        width: 1184px;
-
+        line-height: 75.76px;
+        text-align: center;
         margin-top: 1em;
         margin-bottom: 0.4em;
         text-align: center;
-
-        span {
-          color: #2686ca;
-        }
+        color: var(--secondary-color);
       }
       p {
-        font-family: poppins;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 28px;
-        color: #697586;
-        width: 945px;
-        margin: 0 auto;
-        text-align: center;
         margin-top: 2em;
         padding: 0.5em;
+        width: 572px;
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20.2px;
+        text-align: center;
+        color: #3c3c3c;
+      }
+      .features {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 524px;
+        margin: 0 auto;
+        margin-top: 4em;
+        .one {
+          border-left: 1px solid var(--secondary-color);
+        }
+
+        .one,
+        .first {
+          text-align: center;
+
+          h2 {
+            font-family: Oldenburg;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 20.2px;
+            color: var(--secondary-color);
+
+            span {
+              font-size: 12px;
+              font-weight: 400;
+              line-height: 15.15px;
+              color: #544f4f;
+            }
+          }
+        }
       }
     }
   }
