--- a/main.css
+++ b/main.css
@@ -19,10 +19,6 @@
 * .open-nav {
   transform: translateX(0);
 }
-* .paws,
-* .dots {
-  display: none;
-}
 
 :root {
   --primary-color: #fff;
@@ -38,7 +34,13 @@ body {
   background: var(--primary-color);
   margin: 1em;
 }
-body img {
+body .dogpaws {
+  display: none;
+}
+body .paws {
+  display: none;
+}
+body .dots {
   display: none;
 }
 body #icon {
@@ -137,6 +139,41 @@ body #hero .cta {
   padding: 10px 6px 10px 10px;
   border-radius: 48px;
   margin-top: 2em;
+  margin-bottom: 2em;
+}
+body #hero .cta:hover {
+  background: transparent;
+  color: #562211;
+  border: 2px solid #562211;
+}
+body #hero .features {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+  margin-top: 4em;
+}
+body #hero .features .one,
+body #hero .features .first {
+  text-align: center;
+}
+body #hero .features .one h2,
+body #hero .features .first h2 {
+  font-family: Oldenburg;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20.2px;
+  color: var(--secondary-color);
+}
+body #hero .features .one h2 span,
+body #hero .features .first h2 span {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 15.15px;
+  color: #544f4f;
+}
+body #hero .hero-img {
+  margin-top: 5em;
+  width: 100%;
 }
 
 @media only screen and (min-width: 680px) {
@@ -184,6 +221,27 @@ body #hero .cta {
     width: 25px;
     cursor: pointer;
   }
+  body .dogpaws {
+    width: 450px;
+    top: 8em;
+    display: block;
+    position: absolute;
+  }
+  body .paws {
+    margin-left: 72em;
+    position: absolute;
+    top: 30px;
+    width: 110px;
+    display: block;
+  }
+  body .dots {
+    display: block;
+    position: absolute;
+    width: 10px;
+    top: 500px;
+    bottom: 500px;
+    left: 120em;
+  }
   body header {
     display: flex;
     justify-content: space-between;
@@ -223,7 +281,8 @@ body #hero .cta {
   }
   body header nav ul li a:hover {
     background: none;
-    color: #414141;
+    color: #562211;
+    font-size: 600;
   }
   body header nav ul li a::after {
     content: "";
@@ -260,8 +319,8 @@ body #hero .cta {
     margin-left: -10em;
   }
   body header .cta-buttons:hover {
-    background: #79c0f2;
-    border: 1px solid #2686ca;
+    background: #562211;
+    color: var(--primary-color);
   }
   body #hero {
     margin-top: 4em;
@@ -269,28 +328,55 @@ body #hero .cta {
   }
   body #hero h1 {
     margin-top: 1em;
-    font-size: 90px;
+    width: 785px;
+    font-family: Roboto;
+    font-size: 60px;
     font-weight: 600;
-    line-height: 114.5px;
-    letter-spacing: -0.01em;
-    width: 1184px;
+    line-height: 75.76px;
+    text-align: center;
     margin-top: 1em;
     margin-bottom: 0.4em;
     text-align: center;
-  }
-  body #hero h1 span {
-    color: #2686ca;
+    color: var(--secondary-color);
   }
   body #hero p {
-    font-family: poppins;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 28px;
-    color: #697586;
-    width: 945px;
-    margin: 0 auto;
-    text-align: center;
     margin-top: 2em;
     padding: 0.5em;
+    width: 572px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20.2px;
+    text-align: center;
+    color: #3c3c3c;
+  }
+  body #hero .features {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 524px;
+    margin: 0 auto;
+    margin-top: 4em;
+  }
+  body #hero .features .one {
+    border-left: 1px solid var(--secondary-color);
+  }
+  body #hero .features .one,
+  body #hero .features .first {
+    text-align: center;
+  }
+  body #hero .features .one h2,
+  body #hero .features .first h2 {
+    font-family: Oldenburg;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20.2px;
+    color: var(--secondary-color);
+  }
+  body #hero .features .one h2 span,
+  body #hero .features .first h2 span {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15.15px;
+    color: #544f4f;
   }
 }/*# sourceMappingURL=main.css.map */
