--- a/main.scss
+++ b/main.scss
@@ -85,7 +85,7 @@ body {
       right: 0;
       top: 0;
       height: 100vh;
-      width: 50%;
+      width: 100%;
       z-index: 999;
       transform: translateX(100%);
       transition: 0.5s ease-in-out;
@@ -102,11 +102,12 @@ body {
           font-size: 16px;
           font-weight: 400;
           line-height: 20.2px;
-          //text-align: center;
+          text-align: center;
 
           &:hover {
-            background: #fdfdfd;
-            color: #0b63b2;
+            //background: #fdfdfd;
+            color: #f3a68cdf;
+            font-weight: 700;
           }
         }
       }
@@ -243,7 +244,8 @@ body {
 @media only screen and (min-width: 920px) {
   .menu,
   .close,
-  .nav-cta {
+  .nav-cta,
+  .adopt-now {
     display: none;
   }
 
