--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ body header nav {
   right: 0;
   top: 0;
   height: 100vh;
-  width: 50%;
+  width: 100%;
   z-index: 999;
   transform: translateX(100%);
   transition: 0.5s ease-in-out;
@@ -91,10 +91,11 @@ body header nav ul a {
   font-size: 16px;
   font-weight: 400;
   line-height: 20.2px;
+  text-align: center;
 }
 body header nav ul a:hover {
-  background: #fdfdfd;
-  color: #0b63b2;
+  color: rgba(243, 166, 140, 0.8745098039);
+  font-weight: 700;
 }
 body header .cta-buttons {
   display: none;
@@ -214,7 +215,8 @@ body #hero .hero-img {
 @media only screen and (min-width: 920px) {
   .menu,
   .close,
-  .nav-cta {
+  .nav-cta,
+  .adopt-now {
     display: none;
   }
   body #icon {
